[package]
name = "praxis"
version = "0.1.0"
edition = "2021"
authors = ["Hasibul Hossain Rasheeq"]
description = "Probabilistic Risk Assessment Toolset"
license = "MIT"
repository = "https://github.com/rasheeqqua/praxis"

[dependencies]
quick-xml = "0.31"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
statrs = "0.16"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
base64 = "0.22"
sysinfo = "0.31"
nvml-wrapper = { version = "0.10", optional = true }

# GPU acceleration (optional)
cubecl = { version = "0.9", optional = true }
cubecl-cuda = { version = "0.9", optional = true }
cubecl-wgpu = { version = "0.9", optional = true }
bytemuck = { version = "1.14", optional = true }
napi = { version = "3.8.3", optional = true, features = ["napi6"] }
napi-derive = { version = "3.5.2", optional = true }

[features]
default = []
gpu = ["cubecl", "bytemuck"]
cuda = ["gpu", "cubecl-cuda", "nvml-wrapper"]
wgpu = ["gpu", "cubecl-wgpu"]
gpu_u64 = ["gpu"]
napi-rs = ["napi", "napi-derive"]


[dev-dependencies]
approx = "0.5"

[build-dependencies]
napi-build = "2.3.1"

[[bin]]
name = "praxis-cli"
path = "src/main.rs"
test = false

[lib]
name = "praxis"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[profile.test]
debug = 0
